mern/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: mern-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
        - name: backend
          image: wasimakram8/mern-backend:2.0
          ports:
            - containerPort: 5000
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
