mern/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
  namespace: mern-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-frontend
  template:
    metadata:
      labels:
        app: mern-frontend
    spec:
      containers:
        - name: frontend
          image: wasimakram8/mern-frontend:3.0
          ports:
            - containerPort: 80
