mern/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-svc
  namespace: mern-demo
spec:
  selector:
    app: mern-backend
  ports:
    - port: 5000
      targetPort: 5000
