mern/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend-svc
  namespace: mern-demo
spec:
  selector:
    app: mern-frontend
  ports:
    - port: 80
      targetPort: 80
