mern/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mern-demo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
